# mulch

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
docs/superpowers/plans/: 2026-06-15-shader-streamer.md  2026-06-17-acid-synth.md  2026-06-17-grouped-automation-channels.md  2026-06-17-lfo-module.md  2026-06-17-midi-file-player.md  2026-06-17-sequencer-bpm-sync.md  2026-06-18-acid-bass-level.md  2026-06-18-chord-player-node.md  2026-06-18-image-compositor-node.md  2026-06-18-midi-pitch-graph-node.md  2026-06-18-oscilloscope-node.md  2026-06-18-skybox-node.md  2026-06-20-mono-audio.md  2026-06-20-preferences.md  2026-06-20-save-load.md  2026-06-20-texture-size.md  2026-06-20-vertex-shader-deform.md  2026-06-20-vertex-trail.md  2026-06-21-audio-foundation.md  2026-06-21-bezier-automation-curves.md  2026-06-21-chord-player-presets.md  2026-06-21-midi-beat-clock-sync.md  2026-06-21-mtc-sync.md  2026-06-27-asset-dropdowns.md  2026-06-27-assets-media-library.md  2026-06-27-drum-machine.md  2026-06-28-asset-folder-tree.md  2026-06-28-asset-library-files.md  2026-06-28-asset-multiselect-tag.md  2026-06-28-asset-tags.md  2026-06-28-native-project-dialogs.md  2026-07-01-audio-player-bar-sync.md  2026-07-01-crossover-filter.md  2026-07-01-dockable-panels.md  2026-07-02-cross-platform-ci.md  2026-07-02-image-nodes.md  2026-07-02-image-sequencer.md
docs/superpowers/specs/: 2026-06-15-shader-streamer-design.md  2026-06-17-acid-synth-design.md  2026-06-17-grouped-automation-channels-design.md  2026-06-17-lfo-module-design.md  2026-06-17-midi-file-player-design.md  2026-06-17-sequencer-bpm-sync-design.md  2026-06-18-acid-bass-level-design.md  2026-06-18-chord-player-design.md  2026-06-18-image-compositor-design.md  2026-06-18-midi-pitch-graph-design.md  2026-06-18-oscilloscope-node-design.md  2026-06-18-skybox-node-design.md  2026-06-20-mono-audio-design.md  2026-06-20-preferences-design.md  2026-06-20-save-load-design.md  2026-06-20-texture-size-design.md  2026-06-20-vertex-shader-deform-design.md  2026-06-20-vertex-trail-design.md  2026-06-21-audio-foundation-design.md  2026-06-21-bezier-automation-curves-design.md  2026-06-21-chord-player-presets-design.md  2026-06-21-midi-beat-clock-sync-design.md  2026-06-21-mtc-sync-design.md  2026-06-27-asset-dropdowns-design.md  2026-06-27-assets-media-library-design.md  2026-06-27-drum-machine-design.md  2026-06-28-asset-folder-tree-design.md  2026-06-28-asset-library-files-design.md  2026-06-28-asset-multiselect-tag-design.md  2026-06-28-asset-tags-design.md  2026-07-02-image-nodes-design.md  (+6 more)
packaging/linux/: AppRun  shader-streamer.desktop
packaging/macos/: Info.plist  launch
packaging/windows/: installer.iss
shaders/: colour.frag  compositor.frag  kaleidoscope.frag  mix.frag  skybox.frag  spectrograph.frag
src/: main.cpp
src/app/: Application.cpp  Application.h  MidiSyncEngine.cpp  MidiSyncEngine.h  ThreadPriority.cpp  ThreadPriority.h
src/audio/: AcidVoice.cpp  AcidVoice.h  AudioBlock.h  AudioFile.cpp  AudioFile.h  BarSync.h  FFT.cpp  FFT.h  SampleVoice.h  SignalGenerator.cpp  SignalGenerator.h  SpscRingBuffer.h  StateVariableFilter.h
src/core/: AssetLibrary.cpp  AssetLibrary.h  AssetLibraryFile.cpp  AssetLibraryFile.h  AssetTree.h  AsyncLoader.h  AudioPan.h  AutoCurve.h  AutomationStore.cpp  AutomationStore.h  BlendModes.h  Chords.h  ColorHsv.h  Connection.h  CubeMap.h  DrumPattern.h  Graph.cpp  Graph.h  ImageSequence.h  LazyInit.h  MidiClip.h  MidiClock.cpp  MidiClock.h  MidiFile.cpp  MidiFile.h  MidiTimecode.cpp  MidiTimecode.h  Node.cpp  Node.h  Oscilloscope.cpp  Oscilloscope.h  PathPrefix.h  PathUtil.h  PitchGraph.cpp  PitchGraph.h  Port.h  Preferences.cpp  Preferences.h  ProjectFile.cpp  ProjectFile.h  (+7 more)
src/gfx/: Canvas.h  Framebuffer.cpp  Framebuffer.h  FullscreenPass.cpp  FullscreenPass.h  GLUtil.cpp  GLUtil.h  ImageLoader.cpp  ImageLoader.h  MeshEdges.h  MeshLoader.cpp  MeshLoader.h  ShaderNode.cpp  ShaderNode.h  TextGeometry.cpp  TextGeometry.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h
src/modules/: AcidNode.h  ArpeggiatorNode.h  AudioInputNode.cpp  AudioInputNode.h  AudioMixerNode.h  AudioOutputNode.cpp  AudioOutputNode.h  AudioPlayerNode.cpp  AudioPlayerNode.h  AutomationNode.h  ChordPlayerNode.h  ColourNode.h  CompositorNode.h  CrossoverFilterNode.h  DeformNode.h  DrumMachineNode.h  ImageSequencerNode.h  ImageStreamerNode.h  KaleidoscopeNode.h  LfoNode.h  MeshLoaderNode.cpp  MeshLoaderNode.h  MidiFilePlayerNode.h  MidiInputNode.cpp  MidiInputNode.h  MidiMergeNode.h  MidiOutputNode.cpp  MidiOutputNode.h  MixNode.h  MonoToStereoNode.h  OscilloscopeNode.h  OutputNode.h  PitchGraphNode.h  RecorderNode.cpp  RecorderNode.h  ShadedRenderNode.cpp  ShadedRenderNode.h  SineWaveNode.h  SkyboxNode.h  SpectrographNode.cpp  (+12 more)
src/ui/: AssetsPanel.cpp  AssetsPanel.h  AutomationPanel.cpp  AutomationPanel.h  DockLayout.cpp  DockLayout.h  FileDialog.cpp  FileDialog.h  NodeEditorPanel.cpp  NodeEditorPanel.h  PortWidgets.cpp  PortWidgets.h  PreferencesPanel.cpp  PreferencesPanel.h  TransportBar.cpp  TransportBar.h
tests/: gl_smoke.cpp  test_acid_voice.cpp  test_arpeggiator.cpp  test_asset_library_file.cpp  test_asset_tree.cpp  test_assets.cpp  test_audio_block.cpp  test_audio_bridges.cpp  test_audio_mixer.cpp  test_audio_pan.cpp  test_auto_curve.cpp  test_automation.cpp  test_automation_store.cpp  test_bar_sync.cpp  test_blend_modes.cpp  test_choice_port.cpp  test_chord_player.cpp  test_chords.cpp  test_color_hsv.cpp  test_crossover_filter.cpp  test_cube_map.cpp  test_drum_machine.cpp  test_fft.cpp  test_graph.cpp  test_image_loader.cpp  test_image_sequence.cpp  test_lfo.cpp  test_mesh_edges.cpp  test_midi_clip.cpp  test_midi_clock.cpp  test_midi_file.cpp  test_midi_merge.cpp  test_midi_timecode.cpp  test_oscilloscope.cpp  test_path_util.cpp  test_pitch_graph.cpp  test_preferences.cpp  test_project_enablers.cpp  test_project_file.cpp  test_ring_buffer.cpp  (+11 more)
tests/assets/: strip.gltf  tetra.drc  tetra_draco.gltf  triangle.gltf  v1.gltf
